# QuantumGraphicsToolkit

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  glad.c  main.cpp
doc/ins/en/: building.md
doc/ins/zh/: building.md
doc/ref/en/: fontrenderer.md  intro.md  window.md
doc/ref/zh/: intro.md  window.md
includes/glad/: glad.h
includes/qgt/: FontRenderer.h  RenderableCharacter.h  Shader.h  ShaderFactory.h  StaticFontRenderer.h  Window.h  WindowFactory.h  logger.h  states.h  utils.h
